--- a/installation.tex
+++ b/installation.tex
@@ -4,13 +4,13 @@ You install \LaTeX{} on your computer by downloading a \introduce{distribution},
 which comes with:
 \begin{enumerate}
 \item \LaTeX, the program---the thing that turns text files into nicely-typeset
-    documents.\footnote{Well, \LaTeX{} the program\textbf{s},
-but we're getting to that.}
+    documents.\footnote{We'll actually be installing multiple \LaTeX{} programs,
+    i.e.\ \introduce{engines}, but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
     Packages are pieces of \LaTeX{} code that you can place in your document to
     do all sorts of things, like add new commands or change its style.
-    We'll see lots of them in action throughout the book.
-\item Miscellaneous tools, such as editors and the like.
+    We'll see lots of them in action throughout this book.
+\item Miscellaneous tools, such as editors.
 \end{enumerate}
 Each major operating system has its own \LaTeX{} distribution:
 \begin{description}
@@ -31,7 +31,7 @@ Each major operating system has its own \LaTeX{} distribution:
     \monobox{texlive-luatex} and \monobox{texlive-xetex}.\punckern\footnote{%
     Note that some distributions (like Arch) package all three into a
     single \monobox{texlive-core} package.}
-    As you continue to use \LaTeX, you may start to need less-common packages,
+    As you work with \LaTeX, you may need less-common packages,
     which are usually found in distro packages with names like
     \texttt{texlive-latexextra}, \texttt{texlive-science},
     and so on.\punckern\footnote{Of
