Finish Hello, World?

--- a/back.tex
+++ b/back.tex
@@ -32,7 +32,7 @@ Available at \url{https://practicaltypography.com}
 
 \backmatter
 
-\setkomafont{chapter}{\LARGE\itshape}
+\setkomafont{chapter}{\Huge\itshape}
 
 {\raggedright
 \renewcommand\makeenmark{\theenmark.\enspace}
@@ -81,7 +81,7 @@ You have probably seen it as the wordmark for Wikipedia.
 
 Finally,
 Latin Modern---the OpenType version of Knuth's Computer Modern---as well
-as {\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---a
+as {\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---the
 free alternative to Times Roman seen on page \pageref{typography}---are from
 the digital type foundry of Grupa Użytkowników Systemu \TeX{},
 the Polish \TeX{} Users' Group.
