--- a/history.tex
+++ b/history.tex
@@ -18,12 +18,12 @@ By March of 1977, Knuth was ready for a second run of \acronym{taocp}, volume~2,
 but he was horrified when he received the proofs.
 Hot metal typesetting was an expensive, complicated, and time-consuming process,
 so publishers had replaced it with phototypesetting,
-which works by projecting characters onto film.
+which works by projecting images of characters onto film.
 The new technology, while much cheaper and faster,
-didn't provide the same level of quality he had come to
+didn't provide the same level of quality Knuth had come to
 expect.\punckern\endnote{Donald E.~Knuth, \textit{Digital Typography} (Stanford, 1999), 3--5.}
 
-The average author would have resigned themselves to the change and moved on,
+The average author would have resigned themselves to this change and moved on,
 but Knuth took great pride in print quality,
 especially for the mathematics in his books.
 Around this time, he discovered an exciting new technology:
@@ -65,7 +65,7 @@ font families from the same base designs.}
 Perhaps most importantly, Knuth and his graduate students designed algorithms
 to automatically hyphenate and justify lines of text into
 beautifully-typeset paragraphs.\footnote{These same algorithms went
-on to influence the algorithms Adobe uses in its software.\punckern\endnote{%
+on to influence the ones Adobe uses in its software today.\punckern\endnote{%
 Several sources (\url{http://www.tug.org/whatis.html},
 \url{https://tug.org/interviews/thanh.html},
 \url{http://www.typophile.com/node/34620})
@@ -74,8 +74,8 @@ and Hermann Zapf, thanks to via Knuth's collaborations with Zapf.
 \textit{hz} was later acquired by Adobe and used in part
 when creating their paragraph formatting systems for InDesign.}}
 
-\LaTeX{}, short for Lamport~\TeX{}, was developed as a set of commands
-for common document layouts by Leslie Lamport in the 1980s.
+\LaTeX{}, short for Lamport~\TeX{}, was developed by Leslie Lamport in the 1980s
+as a set of commands for common document layouts.
 It was introduced in 1986 with Lamport's guide,
 \textit{\LaTeX: A Document Preparation System}.
 Other typesetting systems based on \TeX{} also exist,
@@ -142,8 +142,8 @@ so present-day distributions use another program,
 pdf\TeX{} and \XeTeX{} are built by combining the result with other C
 and \cpp{} code.
 The \LuaTeX{} authors, on the other hand, hand-translated Knuth's Pascal into C,
-and have been using the resulting code since 2009.\punckern\endnote{
-Taco Hoekwater, \textit{\LuaTeX says goodbye to Pascal} 
+and have been using the resulting code since 2009.\punckern\endnote{%
+Taco Hoekwater, \textit{\LuaTeX says goodbye to Pascal}
 (MAPS 39, Euro\TeX{} 2009),
 \url{https://www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}}
 
