--- a/installation.tex
+++ b/installation.tex
@@ -5,9 +5,9 @@ which comes with:
 \begin{enumerate}
 \item \LaTeX, the program---the thing that turns text files into nicely-typeset
     documents.\footnote{We'll actually be installing multiple \LaTeX{} programs,
-    i.e.\ \introduce{engines}, but we're getting to that.}
+    but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
-    Packages are pieces of \LaTeX{} code that you can place in your document to
+    Packages are pieces of code that you can place in your document to
     do all sorts of things, like add new commands or change its style.
     We'll see lots of them in action throughout this book.
 \item Miscellaneous tools, such as editors.
@@ -29,7 +29,7 @@ Each major operating system has its own \LaTeX{} distribution:
     \acronym{os}'s package manager (e.g., Apt, RPM, Pacman, Zypper, etc.).
     Use yours to install \monobox{texlive-core},
     \monobox{texlive-luatex} and \monobox{texlive-xetex}.\punckern\footnote{%
-    Note that some distributions (like Arch) package all three into a
+    Some distributions (like Arch) package all three into a
     single \monobox{texlive-core} package.}
     As you work with \LaTeX, you may need less-common packages,
     which are usually found in distro packages with names like
