--- a/why.tex
+++ b/why.tex
@@ -11,8 +11,8 @@ Apple Pages, Google Docs, or LibreOffice Writer.
 All of these other applications are
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)} systems---whatever
 you see on screen is what the final document will look like.
-This is often incredibly convenient, since many changes to your document
-can be made with a few clicks of the mouse,
+This is often incredibly convenient, since many changes can be made
+with a few clicks of the mouse,
 but it isn't without its downsides.
 In a \acronym{wysiwyg} system,
 you must constantly concern yourself with both
@@ -71,10 +71,10 @@ However, it comes with a few advantages:
     {\small\addfontfeature{LetterSpace=8} LIKE THIS},
     I just change the two lines that define those commands
     and every single place in the book that uses them takes on those new styles.
-\item In \LaTeX, the document's structure is immediately visible,
+\item In \LaTeX, the document's structure is immediately visible
     and can be easily copied.
     (Compare this to \acronym{wysiwyg} systems, where it is often not obvious
-    how certain formatting was produced,
+    how certain formatting was produced
     or how to emulate it.)
 \item Since the document source is plain text,
     \begin{itemize}
@@ -104,7 +104,7 @@ only for the sake of art---it draws readers in.\punckern\endnote{Matthew Butteri
 \url{https://www.youtube.com/watch?v=8J6HuvosP0s}.}
 %Matthew Butterick's \textit{Practical Typography} calls it
 %``the visual component of the written word.\quotekern''
-It sets their expectations, and establishes a subliminal ``brand'' for your
+It sets their expectations and establishes a subliminal ``brand'' for your
 work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
 (presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014), \url{https://www.youtube.com/watch?v=ggQpDu63kk0}.}
 It's the \emph{how} of text.
@@ -134,10 +134,10 @@ of money for InDesign or InCopy,
 you won't find any better typesetting software.
 By carefully handling subtle details---like how paragraphs are broken into lines,
 or how words are spaced and hyphenated---\LaTeX{} provides high-quality layout
-with little effort from you, the author.
+with relatively little effort from you, the author.
 Modern versions can also take advantage of new\footnote{By new,
-I mean ``from the mid-1990s''\quotekern, but other desktop publishing software and web
-browsers are only just starting to catch up.} advances in computer typography,
+I mean ``from the mid-1990s''\quotekern, but web browsers and desktop publishing
+software are only just starting to catch up.} advances in computer typography,
 such as OpenType fonts, giving you the same tools available to professional
 designers and publishers.
 
@@ -156,19 +156,19 @@ throwing a 200+ page book at them isn't an encouraging first step.
 The second matters because of how much the world of computer typesetting has
 changed.
 
-When \LaTeX{} was first released in 1986, none of the technologies we use today
-existed. Adobe wouldn't introduce their Portable Document Format for another
-seven years,
-and home computers wouldn't support it ubiquitously for several after that.
+When \LaTeX{} was first released in 1986, none of the publishing technologies
+we use today existed.
+Adobe wouldn't introduce their Portable Document Format for another seven years,
+and home computers wouldn't support it ubiquitously for several more.
 Digital typography was a new field, and desktop publishing was \emph{just}
 getting off the ground.\punckern\endnote{\textit{Graphic Means:
 A History of Graphic Design Production}, directed by Briar Levit (2017)}
-This shows---badly---in most \LaTeX{} guides you find today.
+This shows---badly---in most \LaTeX{} guides.
 If you look for instructions to change your document's font,
-you instantly get swamped with bespoke nonsense.\punckern\footnote{%
+you'll likely get swamped with bespoke nonsense.\punckern\footnote{%
 Take all criticisms of \LaTeX's past here with a grain of
 salt. After all, the fact that it has had such staying power that
-all of the technology around it became obsolete, multiple times, is astounding.}
+all of the technology around it became obsolete---multiple times---is astounding.}
 
 The good news is that  \LaTeX{} has improved by leaps and bounds in recent years,
 and it's time for a guide that doesn't weigh you down with decades of legacy.
